--- a/UniversityCommunities/Views/Home/Login.cshtml
+++ b/UniversityCommunities/Views/Home/Login.cshtml
@@ -32,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sifre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sifre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Sifre, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Sifre, "", new { @class = "text-danger" })
             </div>
         </div>
