--- a/UniversityCommunities/Views/Societies/AddActivity.cshtml
+++ b/UniversityCommunities/Views/Societies/AddActivity.cshtml
@@ -63,13 +63,23 @@
         </div>
     </div>
 
+
     <div class="form-group">
+        @Html.LabelFor(model => model.KonferansSalonuId, "id", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.KonferansSalonuId, ViewBag.KonferansList as SelectList, "Konferans Salonu Seçiniz", new { @class = "" })
+            @Html.ValidationMessageFor(model => model.KonferansSalonuId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    @*<div class="form-group">
         @Html.LabelFor(model => model.KonferansSalonu, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.KonferansSalonu, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.KonferansSalonu, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
 
 
